# easy_translation

./: .gitignore  CMakeLists.txt  README.md  TODO.md
doc/: README_EN.md  README_ZH.md
example/base_example/: CMakeLists.txt  README.md  build_install_run_mingw.sh  build_install_run_msvc2022.bat  language.cpp  language.h  main.cpp  mainwidget.cpp  mainwidget.h
example/base_example/language/: en.json  language.json  zh.json
include/: easy_translate.hpp  easy_translation.hpp
scripts/: text_id_dumper.py
